<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="?android:attr/windowBackground"
    tools:context=".view.profile.profile_underpage.PrivacyPolicyFragment">


    <!-- TextView for the "Profile" title -->
    <TextView
        android:id="@+id/profileTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:fontFamily="@font/inter_bold"
        android:text="@string/profile"
        android:textColor="?attr/colorOnBackground"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/horizontalLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- Horizontal line for visual separation -->
    <View
        android:id="@+id/horizontalLine"
        android:layout_width="match_parent"
        android:layout_height="1.5dp"
        android:layout_marginTop="80dp"
        android:background="?attr/colorOutline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Back button to navigate to the previous screen -->
    <ImageView
        android:id="@+id/backBtn"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginHorizontal="17dp"
        android:layout_marginTop="30dp"
        android:src="@drawable/back_btn"
        app:tint="?attr/colorOnBackground"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/horizontalLine" />

    <!-- Title text for the Select About App screen -->
    <TextView
        android:id="@+id/aboutAppTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter"
        android:text="@string/privacy_policy"
        android:textColor="?attr/colorOnBackground"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/backBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/backBtn" />


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/aboutAppTV"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/language_bg2"
            app:cardCornerRadius="5dp"

            app:layout_constraintTop_toBottomOf="@id/aboutAppTV">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="5dp">
                <TextView
                    android:id="@+id/privacyPolicy1TV"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:fontFamily="@font/inter"
                    android:text="@string/policy_1"
                    android:textSize="16sp"
                    android:textColor="?attr/colorOnBackground"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/privacyPolicy2TV"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginHorizontal="10dp"
                    android:fontFamily="@font/inter_bold"
                    android:text="@string/what_we_collect_label"
                    android:textSize="16sp"
                    android:textColor="?attr/colorOnBackground"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/privacyPolicy1TV" />

                <TextView
                    android:id="@+id/privacyPolicy3TV"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginHorizontal="15dp"
                    android:fontFamily="@font/inter"
                    android:textColor="?attr/colorOnBackground"
                    android:text="@string/privacy_policy3"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/privacyPolicy2TV" />


                <TextView
                    android:id="@+id/privacyPolicy4TV"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginHorizontal="10dp"
                    android:fontFamily="@font/inter_bold"
                    android:text="@string/how_we_use_your_data_labal"
                    android:textSize="16sp"
                    android:textColor="?attr/colorOnBackground"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/privacyPolicy3TV" />

                <TextView
                    android:id="@+id/privacyPolicy5TV"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginHorizontal="15dp"
                    android:fontFamily="@font/inter"
                    android:text="@string/privacy_policy5"
                    android:textSize="16sp"
                    android:textColor="?attr/colorOnBackground"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/privacyPolicy4TV" />

                <TextView
                    android:id="@+id/privacyPolicy6TV"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginHorizontal="10dp"
                    android:fontFamily="@font/inter_bold"
                    android:text="@string/your_rights_labal"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="?attr/colorOnBackground"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/privacyPolicy5TV" />

                <TextView
                    android:id="@+id/privacyPolicy7TV"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginHorizontal="15dp"
                    android:fontFamily="@font/inter"
                    android:text="@string/privacy_policy7"
                    android:textSize="16sp"
                    android:textColor="?attr/colorOnBackground"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/privacyPolicy6TV" />

                <TextView
                    android:id="@+id/privacyPolicy8TV"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginHorizontal="10dp"
                    android:fontFamily="@font/inter_bold"
                    android:text="@string/security_label"
                    android:textSize="16sp"
                    android:textColor="?attr/colorOnBackground"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/privacyPolicy7TV" />

                <TextView
                    android:id="@+id/privacyPolicy9TV"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginHorizontal="15dp"
                    android:fontFamily="@font/inter"
                    android:text="@string/privacy_policy9"
                    android:textSize="16sp"
                    android:textColor="?attr/colorOnBackground"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/privacyPolicy8TV" />

                <TextView
                    android:id="@+id/privacyPolicy10TV"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:fontFamily="@font/inter"
                    android:text="@string/privacy_policy10"
                    android:textSize="16sp"
                    android:textColor="?attr/colorOnBackground"
                    android:layout_marginTop="10dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/privacyPolicy9TV" />

            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.cardview.widget.CardView>

    </androidx.core.widget.NestedScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>