<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="?android:attr/windowBackground"
    tools:context=".view.profile.profile_underpage.AboutAppFragment">

    <!-- TextView for the "Profile" title -->
    <TextView
        android:id="@+id/profileTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:fontFamily="@font/inter_bold"
        android:text="@string/profile"
        android:textColor="?attr/colorOnBackground"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/horizontalLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- Horizontal line for visual separation -->
    <View
        android:id="@+id/horizontalLine"
        android:layout_width="match_parent"
        android:layout_height="1.5dp"
        android:layout_marginTop="80dp"
        android:background="?attr/colorOutline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Back button to navigate to the previous screen -->
    <ImageView
        android:id="@+id/backBtn"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginHorizontal="17dp"
        android:layout_marginTop="30dp"
        android:src="@drawable/back_btn"
        app:tint="?attr/colorOnBackground"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/horizontalLine" />

    <!-- Title text for the Select About App screen -->
    <TextView
        android:id="@+id/aboutAppTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter"
        android:text="@string/about_app"
        android:textColor="?attr/colorOnBackground"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/backBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/backBtn" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/language_bg2"
        app:cardCornerRadius="5dp"

        app:layout_constraintTop_toBottomOf="@id/aboutAppTV">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="5dp">
            <TextView
                android:id="@+id/aboutApp1TV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:fontFamily="@font/inter"
                android:text="@string/about_app1"
                android:textSize="16sp"
                android:textColor="?attr/colorOnBackground"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/aboutApp2TV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginHorizontal="10dp"
                android:fontFamily="@font/inter_bold"
                android:text="@string/key_features_label"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="?attr/colorOnBackground"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/aboutApp1TV" />

            <TextView
                android:id="@+id/aboutApp3TV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginHorizontal="15dp"
                android:fontFamily="@font/inter"
                android:text="@string/key_features"
                android:textSize="16sp"
                android:textColor="?attr/colorOnBackground"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/aboutApp2TV" />

            <TextView
                android:id="@+id/aboutApp4TV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginHorizontal="10dp"
                android:fontFamily="@font/inter"
                android:text="@string/about_app2"
                android:textSize="16sp"
                android:layout_marginBottom="10dp"
                android:textColor="?attr/colorOnBackground"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/aboutApp3TV" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>