<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:attr/windowBackground"
    tools:context=".view.signup.SignUpFragment">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="80dp"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/signUpTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/inter_bold"
        android:text="@string/sign_up"
        android:textColor="?attr/colorOnBackground"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/lt_emailET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/inter"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColorHint="#8D8D8D"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/signUpTV">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:textColor="?attr/colorOnBackground"/>

    </com.google.android.material.textfield.TextInputLayout>


    <!-- First Name input field -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/lt_firstNameET"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:fontFamily="@font/inter"
        android:hint="@string/first_name"
        android:inputType="textPersonName"
        android:textColorHint="#8D8D8D"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@id/lt_lastNameET"
        app:layout_constraintStart_toStartOf="@id/lt_emailET"
        app:layout_constraintTop_toBottomOf="@id/lt_emailET">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/firstNameET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"/>

    </com.google.android.material.textfield.TextInputLayout>

    <!-- Last Name input field -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/lt_lastNameET"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/inter"
        android:hint="@string/last_name"
        android:inputType="textEmailAddress"
        android:textColorHint="#8D8D8D"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@id/lt_emailET"
        app:layout_constraintStart_toEndOf="@id/lt_firstNameET"
        app:layout_constraintTop_toBottomOf="@id/lt_emailET">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/lastNameET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"/>

    </com.google.android.material.textfield.TextInputLayout>

    <!-- Password input field -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/lt_passwordET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/inter"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColorHint="#8D8D8D"
        android:textSize="20sp"
        app:endIconMode="password_toggle"
        app:layout_constraintTop_toBottomOf="@id/lt_firstNameET">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"/>

    </com.google.android.material.textfield.TextInputLayout>

    <!-- Confirm Password input field -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/lt_confirmPasswordET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/inter"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:textColorHint="#8D8D8D"
        android:textSize="20sp"
        app:endIconMode="password_toggle"
        app:layout_constraintTop_toBottomOf="@id/lt_passwordET">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/confirmPasswordET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"/>

    </com.google.android.material.textfield.TextInputLayout>

    <!-- Decorative rectangle shape at the bottom -->
    <ImageView
        android:id="@+id/rectangle_shape"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:src="@drawable/rectangle"
        app:layout_constraintBottom_toBottomOf="parent" />

    <!-- Sign Up button -->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/signInBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="25dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/button_bg"
        android:fontFamily="@font/inter"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/lt_confirmPasswordET" />


    <LinearLayout
        android:id="@+id/lt_btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signInBtn">


        <TextView
            android:id="@+id/alreadyHaveAccountTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter"
            android:textColor="?attr/colorOnBackground"
            android:text="@string/already_have_an_account"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/loginTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:fontFamily="@font/inter_bold"
            android:text="@string/login"
            android:textColor="?attr/colorOnBackground"
            android:textSize="12sp"
            android:textStyle="bold" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>