<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="?android:attr/windowBackground"
    tools:context=".view.history.HistoryFragment">

    <!-- TextView for the "History" title -->
    <TextView
        android:id="@+id/historyTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="15dp"
        android:fontFamily="@font/inter_bold"
        android:text="@string/history"
        android:textColor="?attr/colorOnBackground"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/horizontalLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/btn_more"
        android:layout_width="24dp"
        android:layout_height="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/historyTV"
        app:layout_constraintBottom_toBottomOf="@id/historyTV"
        android:layout_marginEnd="20dp"
        app:tint="?attr/colorOnBackground"
        android:src="@drawable/ic_more_vert_24"/>

    <Button
        android:id="@+id/btn_clearHistory"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:text="@string/clear_history"
        android:background="@color/black"
        android:textColor="@color/white"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/btn_more"
        app:layout_constraintEnd_toEndOf="@id/btn_more"/>

    <!-- Horizontal line for visual separation -->
    <View
        android:id="@+id/horizontalLine"
        android:layout_width="match_parent"
        android:layout_height="1.5dp"
        android:layout_marginTop="80dp"
        android:background="?attr/colorOutline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/item_design"
        app:layout_constraintTop_toBottomOf="@id/horizontalLine"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="48dp"/>

    <!-- TextView displaying a message if there are no products -->
    <TextView
        android:id="@+id/noProductTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:fontFamily="@font/inter"
        android:text="@string/no_product_here"
        android:textColor="?attr/colorOnBackground"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/horizontalLine" />

    <!-- Button to scan the product -->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/scanYourProductButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/button_bg"
        android:fontFamily="@font/inter"
        android:text="@string/scan_your_product"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/noProductTV" />

</androidx.constraintlayout.widget.ConstraintLayout>